Add label for parity and graph format

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
               </div>
               <div class="form-inline advanced" style="display:none">
                 <div class='form-group'>
+                  <label for="parity" >Parity</label>
                   <select id="parity" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
                     <option value='none'>None</option>
                     <option value='even'>Even</option>
@@ -363,7 +364,8 @@
               </div>
               <div class="form-inline advanced" style="display:none">
                 <div class='form-group'>
-                  <select id="graphformat" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose the output format of graph you want.">
+                  <label for="graphformat" >Graph Format</label>
+                  <select id="graphformat" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose the output format of graph you want." style="width:173px">
                     <option value='adjlist'>Adjacency List</option>
                     <option value='adjmtrx'>Adjacency Matrix</option>
                   </select>
