Add order advance setting for numbers

--- a/index.html
+++ b/index.html
@@ -264,6 +264,14 @@
                     <option value='odd'>Odd</option>
                   </select>
                 </div>
+                <div class='form-group'>
+                  <label for="order" >Order</label>
+                  <select id="order" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
+                    <option value='none'>None</option>
+                    <option value='ascending'>Ascending</option>
+                    <option value='descending'>Descending</option>
+                  </select>
+                </div>
               </div>
               <div class="form-inline">
                 <label>Repeat</label>
