Add setting of upper/lower case and whether containing number for string

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </div>
                 <div class='form-group'>
                   <label for="order" >Order</label>
-                  <select id="order" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose even or odd if you want Integer.">
+                  <select id="order" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose order of your integers">
                     <option value='none'>None</option>
                     <option value='ascending'>Ascending</option>
                     <option value='descending'>Descending</option>
@@ -304,6 +304,22 @@
                     <option value='ascii'>ASCII</option>
                     <option value='unicode'>Unicode</option>
                   </select>
+                </div>
+              </div>
+              <div class="form-inline">
+                <div class='form-group'>
+                  <label>Upper/Lowercase</label>
+                  <select id="case" class='form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose a case of your string." style="width:95px">
+                    <option value='none'>None</option>
+                    <option value='upper'>Upper</option>
+                    <option value='lower'>Lower</option>
+                  </select>
+                </div>
+
+                <div class="checkbox">
+                  <label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the string contains number.">
+                    <input id="hasnumber" type="checkbox"> Has Number
+                  </label>
                 </div>
               </div>
               <div class="row">
