Check validation for weight min and max

--- a/index.html
+++ b/index.html
@@ -408,10 +408,12 @@
                   <label for="weightmin" >Weight min</label>
                   <input id="weightmin" class='form-control' type='number'></input>
                 </div>
+                <span id="weightminSpan"></span>
                 <div class='form-group'>
-                  <label for="weightmax" >Weight max</label>
+                  <label for="weightmax" >max</label>
                   <input id="weightmax" class='form-control' type='number'></input>
                 </div>
+                <span id="weightmaxSpan"></span>
               </div>
               <div class="row">
                 <div class="col-sm-12">
