Move icon into download and add tag button for different browser

--- a/index.html
+++ b/index.html
@@ -145,13 +145,10 @@
               </div>
             </div>
             <div id="generate">
-              <button type='button' id="downloadbutton" class='btn'>Download</button>
-              <span><i class="fa fa-download"></i></span>
-              
+              <button type='button' id="downloadbutton" class='btn'>Download<span><i class="fa fa-download"></i></span></button>              
             </div>
             <div id="saveDiv">
-              <button type='button' id="save" class="btn">Add Tags</button>
-              <span><i class="fa fa-tags"></i></span>
+              <button type='button' id="save" class="btn">Add Tags<span><i class="fa fa-tags"></i></span></button>
             </div>
           </div>
 
