Split validation to a new file

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                 </div>
                 <div class='form-group'>
                   <label for="order" >Order</label>
-                  <select id="order" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose order of your integers">
+                  <select id="order" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose order of your numbers">
                     <option value='none'>None</option>
                     <option value='ascending'>Ascending</option>
                     <option value='descending'>Descending</option>
@@ -421,8 +421,8 @@
                 <div class='form-group'>
                   <label for="graphformat" >Graph Format</label>
                   <select id="graphformat" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose the output format of graph you want." style="width:173px">
+                    <option value='edges'>Edges</option>
                     <option value='adjlist'>Adjacency List</option>
-                    <option value='adjmtrx'>Adjacency Matrix</option>
                   </select>
                 </div>
               </div>
@@ -565,5 +565,6 @@
         <script src='js/help.js'></script>
         <script type="text/javascript" src="js/save.js"></script>
         <script type="text/javascript" src="js/previewInput.js"></script>
+        <script type="text/javascript" src="js/validation.js"></script>
       </body>
     </html>
