--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
                     <option value='odd'>Odd</option>
                   </select>
                 </div>
+              </div>
+              <div class="form-inline advanced" style="display:none">
                 <div class='form-group'>
                   <label for="order" >Order</label>
                   <select id="order" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose order of your numbers">
@@ -421,8 +423,8 @@
                 <div class='form-group'>
                   <label for="graphformat" >Graph Format</label>
                   <select id="graphformat" class='form-control' data-toggle="tooltip" data-placement="right" data-original-title="Click to choose the output format of graph you want." style="width:173px">
-                    <option value='edges'>Edges</option>
                     <option value='adjlist'>Adjacency List</option>
+                    <option value='adjmatrix'>Adjacency Matrix</option>
                   </select>
                 </div>
               </div>
@@ -560,8 +562,6 @@
         <script src='js/preview.js'></script>
         <script src="js/tabcontent.js" type="text/javascript"></script>
         <script src="js/tabHelp.js" type="text/javascript"></script>
-        <script src='js/inputInfo.js'></script>
-        <script src='js/login.js'></script>
         <script src='js/help.js'></script>
         <script type="text/javascript" src="js/save.js"></script>
         <script type="text/javascript" src="js/previewInput.js"></script>
