group logic is done

--- a/index.html
+++ b/index.html
@@ -551,6 +551,7 @@
         <script src="https://apis.google.com/js/plus.js"></script>	    
 	      <script src='js/login.js'></script>
         <script src='js/group.js'></script>
+        <script src='js/grouplogic.js'></script>
         <script src="js/jquery.bpopup.min.js"></script>
         <script type="text/javascript" src="js/jquery.cookie.js"></script>
         <script type="text/javascript" src="js/modernizr.mq.js"></script>
