Add permutation option

--- a/index.html
+++ b/index.html
@@ -229,6 +229,11 @@
                     <option value='float'>Float</option>
                   </select>
                 </div>
+                <div id="permutationDiv" class="checkbox">
+                  <label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the permutation from min to max.">
+                    <input id="permutation" type="checkbox"> Permutation
+                  </label>
+                </div>
                 <div id="precisionDiv" class="form-group" data-toggle="tooltip" data-placement="top" data-original-title="Enter precision when Float is chosen." style="display:none">
                   <label for="precision" >precision</label>
                   <input id="precision" class='form-control' type='number' min="1"></input>
