Write permutation generation

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                   </select>
                 </div>
                 <div id="permutationDiv" class="checkbox">
-                  <label data-toggle="tooltip" data-placement="top" data-original-title="Check here if you want the permutation from min to max.">
+                  <label data-toggle="tooltip" data-placement="bottom" data-original-title="Check here if you want a permutation from min to max.">
                     <input id="permutation" type="checkbox"> Permutation
                   </label>
                 </div>
