--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
             <input id="setname" class="form-control" type="text" placeholder="Your data set name here...">
             <p data-toggle="tooltip" data-placement="bottom" data-original-title="Share via SNS">
               <span>
-                <a href='https://twitter.com/home?status=https://datagopro.com' target='_blank' class='btn btn-twitter text-center'>
+                <a href='https://twitter.com/home?status=http://datagopro.com' target='_blank' class='btn btn-twitter text-center'>
                   <i class='fa fa-twitter'></i>
                 </a>
-                <a href='https://www.facebook.com/sharer/sharer.php?u=https://datagopro.com' target='_blank' class='btn btn-facebook'>
+                <a href='https://www.facebook.com/sharer/sharer.php?u=http://datagopro.com' target='_blank' class='btn btn-facebook'>
                   <i class='fa fa-facebook'></i>
                 </a>
-                <a href='https://plus.google.com/share?url=https://datagopro.com' target='_blank' class='btn btn-google-plus'>
+                <a href='https://plus.google.com/share?url=http://datagopro.com' target='_blank' class='btn btn-google-plus'>
                   <i class='fa fa-google-plus'></i>
                 </a>
               </span>
