--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <li><a id='help' data-target="#help"><i class="fa fa-question-circle"></i>Help</a></li>
             <li><a id="login"><i class="fa fa-sign-in"></i>Login</a></li>
             
-            <li id='afterlogin'class="dropdown" style="display:none">
+            <li id='afterlogin' class="dropdown" style="display:none">
               <div class="loginLoadingCover"></div>
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i><span id="profile"></span><i class="fa fa-caret-down"></i></a>
               <ul class="dropdown-menu" role="menu">
@@ -471,7 +471,7 @@
               <p>Click here to refer to the help manual.</p>
             </div>
           </li>
-          <li data-id="login" data-button="Next" data-options="tipLocation:bottom;nubPosition:top-right">
+          <li data-id="login" class="helplogin" data-button="Next" data-options="tipLocation:bottom;nubPosition:top-right">
             <div>
               <p>Click here to log in through facebook or Google+.</p>
             </div>
