login with help

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
               <p>Click here to refer to the help manual.</p>
             </div>
           </li>
-          <li data-id="login" data-button="Next" data-options="tipLocation:bottom;nubPosition:top-right">
+          <li data-id="login" class="helplogin" data-button="Next" data-options="tipLocation:bottom;nubPosition:top-right">
             <div>
               <p>Click here to log in through facebook or Google+.</p>
             </div>
