--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
               <i class="fa fa-plus-circle fa-2x"></i>
               <p>Add more data...</p>
             </div>
-            <div id="groupbutton">
+            <div id="groupbutton" style="display: none">
               <i class="fa fa-plus-square fa-2x"></i>
               <p>Group data...</p>
             </div>
-            <div id="export">
+            <div id="export" style="display:none">
               <p>Export Types</p>
               <ul>
                 <li class="active">TXT</li>
