back end logic link with front end

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <li >
             	<a id='popularinput' data-target="#popular"><i class="fa fa-list-ul"></i>Popular Input</a>
             </li>
-            <li><p id="notice">All changes saved.</p></li>
+            <li><p id="notice">All changes saved</p></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a id='help' data-target="#help"><i class="fa fa-question-circle"></i>Help</a></li>
