--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <a href='https://twitter.com/home?status=http://datagopro.com' target='_blank' class='btn btn-twitter text-center'>
                   <i class='fa fa-twitter'></i>
                 </a>
-                <a href='https://www.facebook.com/sharer/sharer.php?u=http://datagopro.com' target='_blank' class='btn btn-facebook'>
+                <a href='#' id="fbShare" target='_blank' class='btn btn-facebook'>
                   <i class='fa fa-facebook'></i>
                 </a>
                 <a href='https://plus.google.com/share?url=http://datagopro.com' target='_blank' class='btn btn-google-plus'>
