changed some style

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div id="logindiv">
         <h1 id='loginh1'><img src="starlogo.png" id="loginlogo" height="50" width="50"> &nbsp; &nbsp; &nbsp;Log in to Datagopro</h1>
         <div id='logform'>
-          <span id='logintext'> Please log in via <br> </span>
+          <span id='logintext'> Please log in here <br> </span>
           
           <a href='#' class=" btn btn-block btn-social btn-facebook" onclick="fb_login();">
             <i class="fa fa-facebook"></i> <span>Sign in with Facebook</span>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div id='triangle'></div>
-      <div id="continue"><a href='#' id='logclose'>continue without log in</a></div>
+      <div id="continue"><a href='#' id='logclose'>Continue without log in</a></div>
     </div>
     <!-- log in window -->
     <!-- navbar -->
@@ -160,19 +160,6 @@
 
             <div id="tag">
               <h4>CATEGORIES</h4>
-              <span class='label-size'>
-                <a data-target="all">All</a>
-              </span>
-              <span class='label-size'>
-                <a data-target="cat1">Cat1</a>
-              </span>
-              <span class='label-size'>
-                <a data-target="cat2">Cat2</a>
-              </span>
-              <span class='label-size'>
-                <a data-target="cat3">Cat3</a>
-              </span>
-              <a id="more" >Show more</a>
             </div>
           </div>
 
