hided tag box in popular input.

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
             <div id="populartable"></div>
 
-            <div id="tag">
+            <div id="tag" style="display:none">
               <h4>CATEGORIES</h4>
             </div>
           </div>
