resolves #5: clear up folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>DataGoPro</title>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="starlogo.png" />
+    <link rel="shortcut icon" href="img/starlogo.png" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     
@@ -32,7 +32,7 @@
     <!-- log in window -->
     <div id ="element_to_pop_up">
       <div id="logindiv">
-        <h1 id='loginh1'><img src="starlogo.png" id="loginlogo" height="50" width="50"> &nbsp; &nbsp; &nbsp;Log in to Datagopro</h1>
+        <h1 id='loginh1'><img src="img/starlogo.png" id="loginlogo" height="50" width="50"> &nbsp; &nbsp; &nbsp;Log in to Datagopro</h1>
         <div id='logform'>
           <span id='logintext'> Please log in here <br> </span>
           
