change google analytics script position, change ga loading to async, resolve #7: meta tag is added.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>DataGoPro</title>
     <meta charset="utf-8">
+    <meta keyword="DataGoPro random data set generator algorithm problem">
+    <meta description="Testing before releasing/deploying code is a good practice for every coder. Besides corner cases, testing the code against random data is usually a cheaper way to verify the robustness of a code. However, writing the data generator sometimes is not a pleasant and trivial task, and usually doubles the headache: how to make sure the data itself doesn’t contain any flaws? DataGoPro aims to provide a sophisticated data generation scheme to help every coder to generate suitable and abundant random input for specific problems.">
     <link rel="shortcut icon" href="img/starlogo.png" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
@@ -16,19 +18,17 @@
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
     <script type="text/javascript" src="js/layout.js"></script>
-    <style></style>
-  </head>
-  <body>
-    <div id="fb-root"></div>
-    
+    <!-- Google Analytics -->
+    <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-61563497-1', 'auto');
     ga('send', 'pageview');
     </script>
+    <!-- End Google Analytics -->
+  </head>
+  <body>
+    <div id="fb-root"></div>
     <!-- log in window -->
     <div id ="element_to_pop_up">
       <div id="logindiv">
