--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link href="css/tabcontent.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/fonts.css">
     <script type="text/javascript" src="js/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="js/layout.js"></script>
     <!-- Google Analytics -->
     <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
@@ -535,24 +534,25 @@
         
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         
-        <script src="https://apis.google.com/js/plus.js"></script>	    
-	      <script src='js/login.js'></script>
-        <script src='js/group.js'></script>
-        <script src='js/grouplogic.js'></script>
-        <script src="js/jquery.bpopup.min.js"></script>
-        <script type="text/javascript" src="js/jquery.cookie.js"></script>
-        <script type="text/javascript" src="js/modernizr.mq.js"></script>
-        <script src="js/jquery.joyride-2.1.js"></script>
+        <script src="https://apis.google.com/js/plus.js"></script>
         <script src='js/popupController.js'></script>
-        <script src='js/generator.js'></script>
-        <script src='js/inputInfo.js'></script>
-        <script src='js/dataInfo.js'></script>
-        <script src='js/preview.js'></script>
-        <script src="js/tabcontent.js" type="text/javascript"></script>
-        <script src="js/tabHelp.js" type="text/javascript"></script>
-        <script src='js/help.js'></script>
-        <script type="text/javascript" src="js/save.js"></script>
-        <script type="text/javascript" src="js/previewInput.js"></script>
         <script type="text/javascript" src="js/validation.js"></script>
+        <script type="text/javascript" src="js/layout.js"></script>
+	      <script async src='js/login.js'></script>
+        <script async src='js/group.js'></script>
+        <script async src='js/grouplogic.js'></script>
+        <script async src="js/jquery.bpopup.min.js"></script>
+        <script async type="text/javascript" src="js/jquery.cookie.js"></script>
+        <script async type="text/javascript" src="js/modernizr.mq.js"></script>
+        <script async src="js/jquery.joyride-2.1.js"></script>
+        <script async src='js/generator.js'></script>
+        <script async src='js/inputInfo.js'></script>
+        <script async src='js/dataInfo.js'></script>
+        <script async src='js/preview.js'></script>
+        <script async src="js/tabcontent.js" type="text/javascript"></script>
+        <script async src="js/tabHelp.js" type="text/javascript"></script>
+        <script async src='js/help.js'></script>
+        <script async type="text/javascript" src="js/save.js"></script>
+        <script async type="text/javascript" src="js/previewInput.js"></script>
       </body>
     </html>
