fix login loading bug

--- a/index.html
+++ b/index.html
@@ -71,10 +71,9 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a id='help' data-target="#help"><i class="fa fa-question-circle"></i>Help</a></li>
-            <li><a id="login"><i class="fa fa-sign-in"></i>Login</a></li>
+            <li><div class="loginLoadingCover"></div><a id="login"><i class="fa fa-sign-in"></i>Login</a></li>
             
             <li id='afterlogin' class="dropdown" style="display:none">
-              <div class="loginLoadingCover"></div>
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-user"></i><span id="profile"></span><i class="fa fa-caret-down"></i></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a  id="myinput" data-target="#timeline"><i class="fa fa-folder"></i>My Input</a></li>
