use custom event to hide user profile modifier functions

--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
         <script src='js/popupController.js'></script>
         <script src="js/validation.js"></script>
         <script src="js/layout.js"></script>
+        <script async src='js/user.js'></script>
 	      <script async src='js/login.js'></script>
         <script async src='js/group.js'></script>
         <script async src='js/grouplogic.js'></script>
