resolve font file not found error because of folder moving

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="css/lib/joyride-2.1.css">
     <link rel='stylesheet' href='css/lib/bootstrap-social.css'>
     <link rel="stylesheet" href="css/lib/docs.css">
+    <link rel="stylesheet" href="css/lib/fonts.css">
     <link rel="stylesheet" href="css/loginstyle.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tabcontent.css">
-    <link rel="stylesheet" href="css/fonts.css">
     <script src="js/lib/jquery-2.1.3.min.js"></script>
     <!-- Google Analytics -->
     <script async src='//www.google-analytics.com/analytics.js'></script>
@@ -530,6 +530,7 @@
         <script src="js/validation.js"></script>
         <script src="js/layout.js"></script>
         <script src='js/model/user.js'></script>
+        <script src='js/model/dataSession.js'></script>
         <script src='js/view.js'></script>
         <script src='js/controller.js'></script>
         <script async src='js/group.js'></script>
