fix initialize sequence bug; fix scroll bar flicker at first loading time bug; change tag button to top right corner; remove Add Tag button at the bottom

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 </a>
               </span>
             </p>
+            <button id="add-tags" type="button" class="btn"><i class="fa fa-tags" style="color: white;"></i></button>
             <div id="data-field">
        	 	  </div>
             <div id="add" class="empty">
@@ -132,9 +133,6 @@
             </div>
             <div id="generate">
               <button type='button' id="downloadbutton" class='btn'>Download<span><i class="fa fa-download"></i></span></button>              
-            </div>
-            <div id="saveDiv">
-              <button type='button' id="save" class="btn">Add Tags<span><i class="fa fa-tags"></i></span></button>
             </div>
           </div>
 
