make backreference work

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div id="number" class="container popup">
               <div class="form-inline">
                 <div class='form-group'>
-                  <select id="numbertype" class='form-control' onchange="numberChanged(this)" data-toggle="tooltip" data-placement="top" data-original-title="Click to choose Integer or Float.">
+                  <select id="numbertype" class='form-control' data-toggle="tooltip" data-placement="top" data-original-title="Click to choose Integer or Float.">
                     <option value='integer'>Integer</option>
                     <option value='float'>Float</option>
                   </select>
@@ -249,7 +249,7 @@
                 <label>Repeat</label>
                 <div class="form-group">
                   <div class="input-group" style="margin: 0;">
-                    <select id="repeatTypeNumber" class="form-control" style="width: 95px;" onchange="repeatTypeChanged(this)">
+                    <select id="repeatTypeNumber" class="form-control" style="width: 95px;">
                       <option value="custom">Exact</option>
                       <option value="backref">Refer To</option>
                     </select>
