navigator for my input and data editor are using push state to track state

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active">
-              <a id="newdata"data-target="#editor"><i class="fa fa-file-text-o"></i>New Data</a>
+              <a id="newdata"data-target="#editor"><i class="fa fa-file-text-o"></i>Data Editor</a>
             </li>
             <li >
             	<a id='popularinput' data-target="#popular"><i class="fa fa-list-ul"></i>Popular Input</a>
@@ -532,6 +532,7 @@
         <script src='js/view/view.js'></script>
         <script src='js/view/dataSessionView.js'></script>
         <script src='js/view/previewView.js'></script>
+        <script src='js/view/myinputView.js'></script>
         <script aysnc src='js/view/popupView.js'></script>
 
         <script aysnc src='js/controller/controller.js'></script>
