batch refresh function done, remain untested tiny url loading

--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
               </div>
             </div>
             <div id="generate">
-              <button type='button' id="downloadbutton" class='btn'>Download<span><i class="fa fa-download"></i></span></button>              
+              <button type='button' class='btn'>Download<span><i class="fa fa-download"></i></span></button>      
+            </div>
+            <div id="saveDiv">
+              <button type="button" class="btn">Refresh<span><i class="fa fa-refresh"></i></span></button>          
             </div>
           </div>
 
